pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: llm-stack-gpu
  namespace: llm-stack
  labels:
        app: llm-stack
spec:
  nodeSelector:
    eks.amazonaws.com/compute-type: auto

  restartPolicy: OnFailure

  tolerations:
    - key: nvidia.com/gpu
      operator: Exists
      effect: NoSchedule

  containers:
    - name: ollama
      image: 471112887059.dkr.ecr.eu-west-1.amazonaws.com/ollama-instruct-model:latest
      ports:
        - containerPort: 11434
      readinessProbe:
        httpGet:
          path: /api/version
          port: 11434
        initialDelaySeconds: 30
        periodSeconds: 5
      resources:
        requests:
          memory: "30Gi"
          cpu: "3500m"
          nvidia.com/gpu: 1
        limits:
          memory: "30Gi"
          nvidia.com/gpu: 1

    - name: api-instruct
      image: 471112887059.dkr.ecr.eu-west-1.amazonaws.com/api-instruct:latest
      ports:
        - containerPort: 8000
